removed deprecated new Long() adding Long.valueOf()